--- a/desafio04/app/src/main/res/values/strings.xml
+++ b/desafio04/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="create_account">Create Account</string>
     <string name="name">Name</string>
     <string name="confirm_password">Repeat password</string>
+    <string name="cover_details_game">cover details game</string>
+    <string name="back">back</string>
+    <string name="edit">edita</string>
+    <string name="created_at">Created At</string>
+    <string name="description">Description</string>
+    <string name="save_game">Save Game</string>
 </resources>
